Some updates in country and state module
