# routers/router.go
@@ -53,16 +53,23 @@ func init() {
 			beego.NSRouter("/create", &controllers.CarController{}, "post:AddNewCar"),
 			beego.NSRouter("/update", &controllers.CarController{}, "put:UpdateCar"),
 			beego.NSRouter("/delete", &controllers.CarController{}, "delete:DeleteCar"),
+			beego.NSRouter("/search_car", &controllers.CarController{}, "post:FilterCars"),
 		),
 		beego.NSNamespace("/country",
 			beego.NSInclude(&controllers.CountryController{}),
 			beego.NSRouter("/list_countries", &controllers.CountryController{}, "post:FetchCountries"),
 			beego.NSRouter("/filter_country", &controllers.CountryController{}, "post:FilterCountries"),
 			beego.NSRouter("/filter_city", &controllers.CountryController{}, "post:FilterCity"),
-			beego.NSRouter("/list_states", &controllers.CountryController{}, "post:FetchStates"),
-			beego.NSRouter("/country_wise_state", &controllers.CountryController{}, "post:CountryWiseState"),
-			beego.NSRouter("/search_state", &controllers.CountryController{}, "post:FilterStates"),
+			beego.NSRouter("/search_country", &controllers.CountryController{}, "post:FilterCountry"),
+			beego.NSRouter("/get_country", &controllers.CountryController{}, "post:GetCountry"),
 		),
+		beego.NSNamespace("/state",
+		beego.NSInclude(&controllers.StateController{}),
+		beego.NSRouter("/list_states", &controllers.StateController{}, "post:FetchStates"),
+		beego.NSRouter("/country_wise_state", &controllers.StateController{}, "post:CountryWiseState"),
+		beego.NSRouter("/search_state", &controllers.StateController{}, "post:FilterStates"),
+		beego.NSRouter("/get_state", &controllers.StateController{}, "post:GetState"),
+	),
 	)
 	beego.AddNamespace(ns)
 }
